Fix resume.html added research.html

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research.html">Research/Reports</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -47,6 +48,45 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
+                                            <h2 class="fw-bolder">MealMaster AI Chatbot</h2>
+                                            <p>Co-developed MealMaster, an AI-powered meal planning website featuring a chatbot interface built with Gradio. Built a retrieval-augmented generation (RAG) system using LangChain, integrating nutritional and dietary 
+                                                 datasets to deliver tailored recipe recommendations through a seamless, user-centric experience. </p>
+                                            </div>
+                                        <img class="img-fluid" src="assets/mealmasterAI.png" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 2-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">NEST Virtual Makerspace</h2>
+                                            <p>Designed a Figma prototype of NEST, a virtual makerspace for Georgia Tech students to collaborate, brainstorm, and request feedback around self-improvement.
+                                                Applied a user-centered design process including user research, usability testing, and iterative prototyping.</p>
+                                            </div>
+                                        <img class="img-fluid" src="assets/NEST.png" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 3-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder">MEL: Math Ensemble Learning</h2>
+                                            <p>Fine-tuned a Mistral model on mathematical reasoning datasets using Hugging Face,
+                                                 TensorFlow, and PyTorch, and built an ensemble model to improve reasoning accuracy and robustness through comparative performance analysis.</p>
+                                            </div>
+                                        <img class="img-fluid" src="assets/Mistral.jpg" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Project Card 4-->
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
                                             <h2 class="fw-bolder">VIP - Smart City Infrastructure</h2>
                                             <p>Member of the Crash Diagram sub-team. Collaborating and developing an automated tool to assist GDOT Engineers in
                                                 inputting and accessing crash data. Developed an online tool using Python libraries like Matplotlib, NumPy, and Bezier that outputs crash diagram for specified
@@ -56,7 +96,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 2-->
+                            <!-- Project Card 5-->
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
@@ -70,7 +110,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 3-->
+                            <!-- Project Card 6-->
                             <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
