--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research.html">Research/Reports</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -43,7 +44,7 @@
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Development &middot; Evaluation &middot; Analysis</div></div>
                                 <div class="fs-3 fw-light text-muted">We can work together to</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turn data into decisions</span></h1>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turning data into evidence-driven insights</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
@@ -182,8 +183,10 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">I am Saaliha Allauddin and I help code, evaluate, and analyze data</p>
-                                <p class="text-muted">As a passionate and driven graduate Computer Science student at Georgia Tech, I specialize in Machine Learning with a keen interest in data science and analytics. My journey spans from tutoring and leadership roles to cutting-edge research. With a knack for rapid learning and a meticulous eye for detail, I’m committed to advancing the frontiers of data-driven innovation. Let's explore the limitless possibilities of data science together!</p>
+                                <p class="lead fw-light mb-4">I am Saaliha Allauddin and I design, code, evaluate, and analyze data</p>
+                                <p class="text-muted">I am a Computer Science graduate from Georgia Tech with a focus on Machine Learning and a strong interest in human-centered AI and healthcare applications. My journey spans semester-long research projects at both the undergraduate and graduate levels, as well as tutoring and leadership roles. 
+                                    With a knack for rapid learning and a meticulous eye for detail, I am committed to advancing accessible, inclusive, and data-driven innovation.
+                                    Let's explore the limitless possibilities of human-centered research together!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <!--a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a-->
                                     <a class="text-gradient" href="https://www.linkedin.com/in/saaliha-allauddin/"><i class="bi bi-linkedin"></i></a>
