--- a/resume.html
+++ b/resume.html
@@ -19,20 +19,27 @@
         <style>
             /* PDF preview window styles */
             .preview-window {
-                height: 480px; /* desktop default */
+                /* taller preview so PDF fits without horizontal scrolling */
+                height: min(75vh, 900px);
                 border: 1px solid #e9ecef;
                 border-radius: 0.5rem;
-                overflow: auto; /* allow scrolling inside preview */
+                overflow: hidden; /* hide outer scrollbars; PDF viewer will handle vertical scroll */
                 background: #fff;
-            }
-            .pdf-preview {
-                width: 100%;
-                height: 100%;
-                border: 0;
                 display: block;
             }
-            @media (max-width: 767px) {
-                .preview-window { height: 320px; }
+            .pdf-preview {
+                width: 100% !important;
+                height: 100% !important;
+                border: 0;
+                display: block;
+                max-width: 100%;
+                max-height: 100%;
+            }
+            @media (max-width: 991px) {
+                .preview-window { height: min(60vh, 700px); }
+            }
+            @media (max-width: 575px) {
+                .preview-window { height: 50vh; }
             }
         </style>
     </head>
@@ -46,8 +53,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume & CV</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume/CV</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research.html">Research/Reports</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -56,7 +64,7 @@
             <!-- Page Content-->
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume & CV</span></h1>
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume/CV</span></h1>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -73,7 +81,7 @@
                                                 <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Resume</span></h3>
                                             </div>
                                             <div class="preview-window mb-3">
-                                                <iframe id="resumePreview" class="pdf-preview" src="assets/Saaliha%20Allauddin%20Resume.pdf" title="Resume preview" aria-hidden="true"></iframe>
+                                                <iframe id="resumePreview" class="pdf-preview" src="assets/Saaliha%20Allauddin%20Resume.pdf#view=FitH" title="Resume preview" scrolling="yes"></iframe>
                                             </div>
                                              <div class="d-flex gap-2 justify-content-end">
                                                  <a class="btn btn-outline-primary" href="#" data-pdf="assets/Saaliha%20Allauddin%20Resume.pdf" onclick="openPdf(event)">View</a>
@@ -89,7 +97,7 @@
                                                 <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">CV</span></h3>
                                             </div>
                                             <div class="preview-window mb-3">
-                                                <iframe id="cvPreview" class="pdf-preview" src="assets/Saaliha%20Allauddin%20CV.pdf" title="CV preview" aria-hidden="true"></iframe>
+                                                <iframe id="cvPreview" class="pdf-preview" src="assets/Saaliha%20Allauddin%20CV.pdf#view=FitH" title="CV preview" scrolling="yes"></iframe>
                                             </div>
                                             <div class="d-flex gap-2 justify-content-end">
                                                 <a class="btn btn-outline-primary" href="#" data-pdf="assets/Saaliha%20Allauddin%20CV.pdf" onclick="openPdf(event)">View</a>
