--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Personal - Start Bootstrap Theme</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon_2.jpg" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,15 +22,15 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Saaliha Allauddin</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder fs-4 text-primary">Saaliha Allauddin</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder fs-5">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume/CV</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                             <li class="nav-item"><a class="nav-link" href="research.html">Research/Reports</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>-->
                         </ul>
                     </div>
                 </div>
@@ -44,9 +44,9 @@
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Development &middot; Evaluation &middot; Analysis</div></div>
                                 <div class="fs-3 fw-light text-muted">We can work together to</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turning data into evidence-driven insights</span></h1>
+                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turn data into evidence-driven insights</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume/CV</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
                                 </div>
                             </div>
@@ -183,8 +183,8 @@
                         <div class="col-xxl-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4">I am Saaliha Allauddin and I design, code, evaluate, and analyze data</p>
-                                <p class="text-muted">I am a Computer Science graduate from Georgia Tech with a focus on Machine Learning and a strong interest in human-centered AI and healthcare applications. My journey spans semester-long research projects at both the undergraduate and graduate levels, as well as tutoring and leadership roles. 
+                                <p class="lead fw-light mb-4 fs-4">I am Saaliha Allauddin and I design, code, evaluate, and analyze data</p>
+                                <p class="fs-5 text-muted">I am a Computer Science graduate from Georgia Tech with a focus on Machine Learning and a strong interest in human-centered AI and healthcare applications. My journey spans semester-long research projects at both the undergraduate and graduate levels, as well as tutoring and leadership roles. 
                                     With a knack for rapid learning and a meticulous eye for detail, I am committed to advancing accessible, inclusive, and data-driven innovation.
                                     Let's explore the limitless possibilities of human-centered research together!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
@@ -207,8 +207,6 @@
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
                     </div>
                 </div>
             </div>
