--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder fs-4 text-primary">Saaliha Allauddin</span></a>
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder fs-5 text-primary">Saaliha Allauddin</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder fs-5">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder fs-6">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume/CV</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
@@ -39,21 +39,21 @@
             <header class="py-5">
                 <div class="container px-5 pb-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-xxl-5">
+                        <div class="col-lg-5">
                             <!-- Header text content-->
-                            <div class="text-center text-xxl-start">
+                            <div class="text-center text-lg-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Development &middot; Evaluation &middot; Analysis</div></div>
                                 <div class="fs-3 fw-light text-muted">We can work together to</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turn data into evidence-driven insights</span></h1>
-                                <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
+                                <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-lg-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume/CV</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xxl-7">
+                        <div class="col-lg-7">
                             <!-- Header profile picture-->
-                            <div class="d-flex justify-content-center mt-5 mt-xxl-0">
+                            <div class="d-flex justify-content-center mt-5 mt-lg-0">
                                 <div class="profile bg-gradient-primary-to-secondary">
                                     <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                     <!-- Watch a tutorial on how to do this on YouTube (link)-->
@@ -180,7 +180,7 @@
             <section class="bg-light py-5">
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
-                        <div class="col-xxl-8">
+                        <div class="col-lg-8">
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4 fs-4">I am Saaliha Allauddin and I design, code, evaluate, and analyze data</p>
