--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="text-center text-lg-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Development &middot; Evaluation &middot; Analysis</div></div>
                                 <div class="fs-3 fw-light text-muted">We can work together to</div>
-                                <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Turn data into evidence-driven insights</span></h1>
+                                <h1 class="display-6 fw-bolder mb-5"><span class="text-gradient d-inline">Turn data into evidence-driven insights</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-lg-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Resume/CV</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a>
@@ -182,9 +182,9 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-8">
                             <div class="text-center my-5">
-                                <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                                <p class="lead fw-light mb-4 fs-4">I am Saaliha Allauddin and I design, code, evaluate, and analyze data</p>
-                                <p class="fs-5 text-muted">I am a Computer Science graduate from Georgia Tech with a focus on Machine Learning and a strong interest in human-centered AI and healthcare applications. My journey spans semester-long research projects at both the undergraduate and graduate levels, as well as tutoring and leadership roles. 
+                                <h2 class="display-7 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
+                                <p class="lead fw-light mb-4 fs-5">I am Saaliha Allauddin and I design, code, evaluate, and analyze data</p>
+                                <p class="fs-6 text-muted">I am a Computer Science graduate from Georgia Tech with a focus on Machine Learning and a strong interest in human-centered AI and healthcare applications. My journey spans semester-long research projects at both the undergraduate and graduate levels, as well as tutoring and leadership roles. 
                                     With a knack for rapid learning and a meticulous eye for detail, I am committed to advancing accessible, inclusive, and data-driven innovation.
                                     Let's explore the limitless possibilities of human-centered research together!</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
@@ -202,12 +202,12 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
-                    <div class="col-auto">
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2025</div></div>
+                    <div class="col-auto"><!--
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terms</a>
-                    </div>
+                    --></div>
                 </div>
             </div>
         </footer>
