--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-6 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
+                        <h1 class="display-6 fw-bolder mb-0"><span class="text-gradient fs-3 d-inline">Projects</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -48,7 +48,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">MealMaster AI Chatbot</h2>
+                                            <h2 class="fw-bolder fs-4">MealMaster AI Chatbot</h2>
                                             <p>Co-developed MealMaster, an AI-powered meal planning website featuring a chatbot interface built with Gradio. Built a retrieval-augmented generation (RAG) system using LangChain, integrating nutritional and dietary 
                                                  datasets to deliver tailored recipe recommendations through a seamless, user-centric experience. </p>
                                             </div>
@@ -61,7 +61,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">NEST Virtual Makerspace</h2>
+                                            <h2 class="fw-bolder fs-4">NEST Virtual Makerspace</h2>
                                             <p>Designed a Figma prototype of NEST, a virtual makerspace for Georgia Tech students to collaborate, brainstorm, and request feedback around self-improvement.
                                                 Applied a user-centered design process including user research, usability testing, and iterative prototyping.</p>
                                             </div>
@@ -74,7 +74,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">MEL: Math Ensemble Learning</h2>
+                                            <h2 class="fw-bolder fs-4">MEL: Math Ensemble Learning</h2>
                                             <p>Fine-tuned a Mistral model on mathematical reasoning datasets using Hugging Face,
                                                  TensorFlow, and PyTorch, and built an ensemble model to improve reasoning accuracy and robustness through comparative performance analysis.</p>
                                             </div>
@@ -87,7 +87,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">VIP - Smart City Infrastructure</h2>
+                                            <h2 class="fw-bolder fs-4">VIP - Smart City Infrastructure</h2>
                                             <p>Member of the Crash Diagram sub-team. Collaborating and developing an automated tool to assist GDOT Engineers in
                                                 inputting and accessing crash data. Developed an online tool using Python libraries like Matplotlib, NumPy, and Bezier that outputs crash diagram for specified
                                                 intersection.</p>
@@ -101,7 +101,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Customer Churn Prediction Model</h2>
+                                            <h2 class="fw-bolder fs-4">Customer Churn Prediction Model</h2>
                                             <p>Collaborated as a team in CS 7641 (Machine Learning) to develop a Customer Churn Prediction model that can be utilized by
                                                 Telecomm Companies. Developed the model using supervised and unsupervised learning algorithms and models like the PCA algorithm, Random
                                                 Forest, and SVM models.</p>
@@ -115,7 +115,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Foresee Your Route App - UI Design</h2>
+                                            <h2 class="fw-bolder fs-4">Foresee Your Route App - UI Design</h2>
                                             <p>Designed a route planning app named Forsee Your Route as a team for CS 3790 (User Interface Design), which provides
                                                 route-planning features for runs that make comfort-centric information.
                                                 Conducted in-depth research, interviews, and analysis were conducted to develop the app, and Figma was used to design the
@@ -130,10 +130,10 @@
                 </div>
             </section>
             <!-- Call to action section-->
-            <section class="py-5 bg-gradient-primary-to-secondary text-white">
-                <div class="container px-5 my-5">
+            <section class="py-sm-2 bg-gradient-primary-to-secondary text-white">
+                <div class="container px-6 my-5">
                     <div class="text-center">
-                        <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
+                        <h2 class="display-6 fw-bolder fs-3 mb-4">Let's build something together</h2>
                         <!--<a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>-->
                     </div>
                 </div>
