--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
             <!-- Page Content-->
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h1 class="display-6 fw-bolder mb-0"><span class="text-gradient d-inline">Research/Reports</span></h1>
+                    <h1 class="display-6 fw-bolder mb-0"><span class="text-gradient fs-3 d-inline">Research/Reports</span></h1>
                     <p class="fs-5 mt-3 mb-0">The research papers, reports, and posters on this page reflect semester-long projects completed as part of my undergraduate and graduate coursework.</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
@@ -94,11 +94,10 @@
                         <!-- Experience Section-->
                             <section>
                                 <div class="mb-4">
-
                                     <!-- Paper 1 -->
                                      <div class="card shadow border-0 rounded-4 mb-5">
                                         <div class="card-body p-5 d-flex flex-column">
-                                            <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Multimodal Reasoning in Healthcare</span></h3>
+                                            <h3 class="fw-bolder mb-3"><span class="text-primary fs-4 d-inline">Multimodal Reasoning in Healthcare</span></h3>
                                             <div class="preview-window mb-3">
                                                 <iframe class="pdf-preview" src="assets/Multimodal%20Reasoning%20in%20Healthcare.pdf#view=FitH" title="Multimodal Reasoning preview" scrolling="yes"></iframe>
                                             </div>
@@ -112,7 +111,7 @@
                                     <!-- Paper 2 -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
                                         <div class="card-body p-5 d-flex flex-column">
-                                            <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Importance of Emotions in Human Cognition and Rationality</span></h3>
+                                            <h3 class="fw-bolder mb-3"><span class="text-primary fs-4 d-inline">Importance of Emotions in Human Cognition and Rationality</span></h3>
                                             <div class="preview-window mb-3">
                                                 <iframe class="pdf-preview" src="assets/Importance%20of%20Emotions%20in%20Human%20Cognition%20and%20Rationality.pdf#view=FitH" title="Importance of Emotions preview" scrolling="yes"></iframe>
                                             </div>
@@ -126,7 +125,7 @@
                                     <!-- Paper 3 -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
                                         <div class="card-body p-5 d-flex flex-column">
-                                            <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Higher Level Reasoning with Conversational AI</span></h3>
+                                            <h3 class="fw-bolder mb-3"><span class="text-primary fs-4 d-inline">Higher Level Reasoning with Conversational AI</span></h3>
                                             <div class="preview-window mb-3">
                                                 <iframe class="pdf-preview" src="assets/Higher_Level_Reasoning_with_Conversational_AI_Paper.pdf#view=FitH" title="Higher Level Reasoning preview" scrolling="yes"></iframe>
                                             </div>
@@ -140,7 +139,7 @@
                                     <!-- Paper 4 -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
                                         <div class="card-body p-5 d-flex flex-column">
-                                            <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">NEST HCI Final Report</span></h3>
+                                            <h3 class="fw-bolder mb-3"><span class="text-primary fs-4 d-inline">NEST HCI Final Report</span></h3>
                                             <div class="preview-window mb-3">
                                                 <iframe class="pdf-preview" src="assets/NEST%20HCI%20Final%20Report.pdf#view=FitH" title="NEST HCI preview" scrolling="yes"></iframe>
                                             </div>
@@ -154,7 +153,7 @@
                                     <!-- Paper 5 -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
                                         <div class="card-body p-5 d-flex flex-column">
-                                            <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Pedestrian Issues UIUX Report</span></h3>
+                                            <h3 class="fw-bolder mb-3"><span class="text-primary fs-4 d-inline">Pedestrian Issues UIUX Report</span></h3>
                                             <div class="preview-window mb-3">
                                                 <iframe class="pdf-preview" src="assets/Pedestrian%20Issues%20UIUX%20Report.pdf#view=FitH" title="Pedestrian Issues preview" scrolling="yes"></iframe>
                                             </div>
@@ -168,7 +167,7 @@
                                     <!-- Paper 6 -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
                                         <div class="card-body p-5 d-flex flex-column">
-                                            <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Instagram vs Happiness (Research Poster)</span></h3>
+                                            <h3 class="fw-bolder mb-3"><span class="text-primary fs-4 d-inline">Instagram vs Happiness (Research Poster)</span></h3>
                                             <div class="poster-window mb-3">
                                                 <!-- Use zoom=100 to avoid browser auto-fit shrinking; allow vertical scroll inside container -->
                                                 <iframe class="poster-full" src="assets/Instagram%20vs%20Happiness%20Research%20Poster.pdf#zoom=100" title="Instagram vs Happiness poster" scrolling="yes"></iframe>
