--- a/resume.html
+++ b/resume.html
@@ -81,11 +81,11 @@
                                                 <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Resume</span></h3>
                                             </div>
                                             <div class="preview-window mb-3">
-                                                <iframe id="resumePreview" class="pdf-preview" src="assets/Saaliha%20Allauddin%20Resume.pdf#view=FitH" title="Resume preview" scrolling="yes"></iframe>
+                                                <iframe id="resumePreview" class="pdf-preview" src="assets/Saaliha_Allauddin_Resume.pdf" title="Resume preview" scrolling="yes"></iframe>
                                             </div>
                                              <div class="d-flex gap-2 justify-content-end">
-                                                 <a class="btn btn-outline-primary" href="#" data-pdf="assets/Saaliha%20Allauddin%20Resume.pdf" onclick="openPdf(event)">View</a>
-                                                 <a class="btn btn-primary" href="assets/Saaliha%20Allauddin%20Resume.pdf" download>Download</a>
+                                                 <a class="btn btn-outline-primary" href="#" data-pdf="assets/Saaliha_Allauddin_Resume.pdf" onclick="openPdf(event)">View</a>
+                                                 <a class="btn btn-primary" href="assets/Saaliha_Allauddin_Resume.pdf" download>Download</a>
                                              </div>
                                          </div>
                                      </div>
@@ -97,11 +97,11 @@
                                                 <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">CV</span></h3>
                                             </div>
                                             <div class="preview-window mb-3">
-                                                <iframe id="cvPreview" class="pdf-preview" src="assets/Saaliha%20Allauddin%20CV.pdf#view=FitH" title="CV preview" scrolling="yes"></iframe>
+                                                <iframe id="cvPreview" class="pdf-preview" src="assets/Saaliha_Allauddin_CV.pdf" title="CV preview" scrolling="yes"></iframe>
                                             </div>
                                             <div class="d-flex gap-2 justify-content-end">
-                                                <a class="btn btn-outline-primary" href="#" data-pdf="assets/Saaliha%20Allauddin%20CV.pdf" onclick="openPdf(event)">View</a>
-                                                <a class="btn btn-primary" href="assets/Saaliha%20Allauddin%20CV.pdf" download>Download</a>
+                                                <a class="btn btn-outline-primary" href="#" data-pdf="assets/Saaliha_Allauddin_CV.pdf" onclick="openPdf(event)">View</a>
+                                                <a class="btn btn-primary" href="assets/Saaliha_Allauddin_CV.pdf" download>Download</a>
                                             </div>
                                         </div>
                                     </div>
