--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
                 </div>
             </nav>
             <!-- Page Content-->
-            <div class="container px-5 my-5">
+            <div class="container px-3 px-md-5 my-5">
                 <div class="text-center mb-5">
                     <h1 class="display-6 fw-bolder mb-0"><span class="text-gradient fs-3 d-inline">Resume/CV</span></h1>
                 </div>
@@ -76,7 +76,7 @@
 
                                     <!-- Resume Card -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
-                                        <div class="card-body p-5 d-flex flex-column">
+                                        <div class="card-body p-3 p-md-5 d-flex flex-column">
                                             <div class="d-flex justify-content-between align-items-start mb-2">
                                                 <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">Resume</span></h3>
                                             </div>
@@ -92,7 +92,7 @@
  
                                     <!-- CV Card -->
                                     <div class="card shadow border-0 rounded-4 mb-5">
-                                        <div class="card-body p-5 d-flex flex-column">
+                                        <div class="card-body p-3 p-md-5 d-flex flex-column">
                                             <div class="d-flex justify-content-between align-items-start mb-2">
                                                 <h3 class="fw-bolder mb-3"><span class="text-primary d-inline">CV</span></h3>
                                             </div>
@@ -149,7 +149,7 @@
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
-            <div class="container px-5">
+            <div class="container px-3 px-md-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
                     <div class="col-auto">
